fix: corrigir campo valor estimado para BigDecimal e correção no teste de EntidadeServiceTest