@@ -3,15 +3,14 @@ package br.gov.es.siscap.dto;
 import br.gov.es.siscap.models.Microrregiao;
 import br.gov.es.siscap.models.Projeto;
 
-import java.math.BigInteger;
+import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public record ProjetoDto(
         Long id,
         String sigla,
         String titulo,
-        BigInteger valorEstimado,
+        BigDecimal valorEstimado,
         String objetivo,
         String objetivoEspecifico,
         Long idStatus,
@@ -27,7 +26,7 @@ public record ProjetoDto(
                 projeto.getObjetivo(), projeto.getObjetivoEspecifico(), projeto.getStatus().getId(),
                 projeto.getEntidade().getId(), projeto.getSituacaoProblema(), projeto.getSolucoesPropostas(),
                 projeto.getImpactos(), projeto.getArranjosInstitucionais(),
-                projeto.getMicrorregioes().stream().map(Microrregiao::getId).collect(Collectors.toList()));
+                projeto.getMicrorregioes().stream().map(Microrregiao::getId).toList());
     }
 
 }
